--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Zoom</title>
 </head>
@@ -12,8 +13,10 @@
          <div class="debug item">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
          </div>
-        <span class="spv">Speaker View</span>          
-         
+        <div class="top-right"> 
+        <span class="speaker"><i class="fa-solid fa-table-cells"></i> Speaker View</span>
+        <span class="full-screen"><i class="fa-solid fa-maximize"></i></span>          
+        </div> 
          
          <div class="debug item">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
