--- a/index.html
+++ b/index.html
@@ -10,116 +10,148 @@
 <body>
     <div class="container">
       <div class="main d-flex wrap j-center">
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
         <div class="top-right"> 
         <span class="speaker"><i class="fa-solid fa-table-cells"></i> Speaker View</span>
         <span class="full-screen"><i class="fa-solid fa-maximize"></i></span>          
         </div> 
          
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
+         </div><div class="debug item relative">
+            <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
+         </div><div class="debug item relative">
+            <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
+         </div><div class="debug item relative">
+            <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
+         <div class="debug item relative">
             <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
+            <span class="pincopallo"><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
          </div>
-         <div class="debug item">
-            <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
-         </div>
-         <div class="debug item">
-            <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
-         </div>
-         <div class="debug item">
-            <img src="https://fastly.picsum.photos/id/871/300/200.jpg?hmac=Fy9MXfb2E6jQGPCfGwlaV9MirwHx3XxTGNRFxsir6K0" alt="img1">
-         </div>    
       </div>
       <div class="playbar d-flex">
         <section class="d-flex container-flex">    
